[package]
name = "v-common-az-lmdb"
version = "0.1.1"
authors = ["itiu <ValeriyBushenev@gmail.com>"]
edition = "2018"
description = "common part of the veda platform"
license     = "MIT"

[lib]
path = "src/az-lmdb.rs"

[dependencies]
lazy_static = "1.4"
lmdb-rs-m = "0.7.7"

v_authorization = "0.1.0"

